# HW6-HMM

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
hmm/: hmm.py
test/: test_hmm.py
